@@ -7,11 +7,11 @@
 function test()
 {
     WebInspector.showPanel("scripts");
-    var files = WebInspector.panels.scripts._filesSelectElement;
+    var files = WebInspector.panels.scripts._fileSelector._filesSelectElement;
     for (var i = 0; i < files.options.length; ++i) {
          if (files.options[i].value.indexOf("inspector-test.js") !== -1) {
              files.selectedIndex = i;
-             WebInspector.panels.scripts._filesSelectChanged();
+             WebInspector.panels.scripts._fileSelector._filesSelectChanged();
              break;
          }
     }
@@ -21,9 +21,9 @@ function test()
         WebInspector.showPanel("audits");
         var showPanelTimerCookie = timer.start("first-open-scripts");
         WebInspector.showPanel("scripts");
-        var count = WebInspector.panels.scripts._visibleView._textViewer._mainPanel._textChunks.length;
-        WebInspector.panels.scripts._visibleView._textViewer._mainPanel._expandChunks(0, count);
-        WebInspector.panels.scripts._visibleView._textViewer._mainPanel._paintScheduledLines();
+        var count = WebInspector.panels.scripts.visibleView._textViewer._mainPanel._textChunks.length;
+        WebInspector.panels.scripts.visibleView._textViewer._mainPanel._expandChunks(0, count);
+        WebInspector.panels.scripts.visibleView._textViewer._mainPanel._paintScheduledLines();
         timer.finish(showPanelTimerCookie);
         timer.done("first-open");
     }
